--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,15 @@ body {
 h1 {
   color: orange;
   text-align: center;
-  font-size: 50px;
+  font-size: 55px;
+  text-shadow: 3px 3px 3px rgb(197, 88, 16);
+  margin: 20px;
+}
+
+h2 {
+  color: orchid;
+  text-align: center;
+  font-size: 25px;
 }
 
 .card {
@@ -24,36 +32,39 @@ h1 {
   margin-bottom: 4%;
   align-items: center;
   position: relative;
-  border-radius: .25rem;
-  box-shadow:  0 0 5px 2px rgba(0, 0, 0, .3);
-  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+  background-color: rgb(230, 215, 233);
   transform-style: preserve-3d;
-  height: 250px;
+  height: 230px;
   width: 250px;
   cursor: pointer;
   transition: 150ms;
-  transform: perspective(1000px) rotateY(var(--rotate-y, 0))
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0));
 }
 
-.card:hover{
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5)
+.card:hover {
+  box-shadow: 5px 10px rgba(0, 0, 0, 0.5);
+  background-color: white;
 }
 
 .card.flip {
   --rotate-y: 180deg;
+  box-shadow: 5px 10px rgba(31, 30, 30, 0.5);
 }
 
-.card .front, .card .back{
+.card .front,
+.card .back {
   position: absolute;
   padding: 1rem;
   backface-visibility: hidden;
 }
 
 .card .back {
-  transform: rotateY(180deg)
+  transform: rotateY(180deg);
 }
 
-.flashcard-options{
+.flashcard-options {
   margin-top: 0.5rem;
 }
 
