--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   background-color: purple;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
+  margin-left: 55px;
 }
 
 .card-grid {
@@ -16,17 +17,18 @@ h1 {
   text-align: center;
   font-size: 55px;
   text-shadow: 3px 3px 3px rgb(197, 88, 16);
-  margin: 20px;
 }
 
 h2 {
   color: orchid;
   text-align: center;
   font-size: 25px;
+  padding-right: 55px;
 }
 
 .card {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-left: 15%;
   margin-bottom: 4%;
